<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_width="match_parent"
                    android:layout_height="match_parent">
        <include layout="@layout/pokemon_basic" android:id="@+id/pokemon_basic_container"></include>
        <LinearLayout android:id="@+id/button_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_gravity="bottom|center_horizontal" android:layout_marginBottom="60dp">
            <Button
                    android:id="@+id/button_catch"
                    android:padding="5dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/textColorSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/catch_pokemon"
                    android:visibility="gone"
                    android:textColor="@color/textColor"/>
            <Button
                    android:id="@+id/button_leave"
                    android:padding="5dp"
                    android:layout_marginLeft="20dp"
                    android:background="@color/textColorSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_pokemon"
                    android:textColor="@color/textColor"/>

        </LinearLayout>
    </FrameLayout>
</layout>
