<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_backpack"
            android:icon="@drawable/ic_backpack"
            android:title="@string/title_backpack"/>

    <item
            android:id="@+id/navigation_search"
            android:icon="@drawable/ic_catch"
            android:title="@string/title_search"/>

</menu>
